# plugin-os-themes

./: .gitignore  Cargo.toml  Makefile  README.md  plugin.toml  qol-config.toml
.github/workflows/: ci.yml  release.yml
docs/: handoff.md
src/: config.rs  daemon.rs  main.rs
src/app/: daemon_run.rs  mod.rs
src/cursor/: control.rs  mod.rs
src/cursor/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/cursor/platform/linux/: mod.rs  motion.rs  runtime.rs  scale.rs  x11.rs  x11_xfixes.rs
src/theme/: mod.rs
src/theme/platform/: linux.rs  macos.rs  mod.rs  windows.rs
ui/: index.html
