[package]
name = "plugin-os-themes"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
qol-plugin-api = { git = "https://github.com/qol-tools/qol-plugin-api", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2", features = ["xlib", "xfixes", "xcursor"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
qol-tray = { git = "https://github.com/qol-tools/qol-tray" }
toml = "0.9"
